--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "name": "using-preact",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "module-alias": "2.2.2",
+    "@emotion/core": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "next": "latest",
-    "preact": "10.0.0",
-    "preact-render-to-string": "5.0.7"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "rebass": "^4.0.7",
+    "three": "^0.112.1",
+    "three-text2d": "^0.5.3"
   },
   "license": "ISC",
   "devDependencies": {
-    "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "@types/node": "^13.1.1",
+    "@types/react": "^16.9.17",
+    "@types/rebass": "^4.0.3",
+    "babel-plugin-emotion": "^10.0.27",
+    "typescript": "^3.7.4"
   }
 }
