--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "next": "latest",
+    "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rebass": "^4.0.7",
-    "three": "^0.112.1",
-    "three-text2d": "^0.5.3"
+    "three": "^0.112.1"
   },
   "license": "ISC",
   "devDependencies": {
