--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.27",
-    "emotion-theming": "^10.0.27",
+    "es6-tween": "^5.5.10",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "rebass": "^4.0.7",
-    "three": "^0.112.1"
+    "react-scroll-parallax": "^2.3.1",
+    "three": "^0.113.2"
   },
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
-    "@types/rebass": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-plugin-emotion": "^10.0.27",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "typescript": "^3.7.4"
   }
 }
