--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "es6-tween": "^5.5.10",
+    "lodash.chunk": "^4.2.0",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-plx": "^1.3.15",
     "react-scroll-parallax": "^2.3.1",
     "three": "^0.113.2"
   },
