--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "prettier/@typescript-eslint",
-    "prettier/react",
-    "plugin:prettier/recommended"
+    "prettier/react"
   ],
   "plugins": ["react", "prettier", "react-hooks", "jsx-a11y"],
   "parserOptions": {
