--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-plugin-emotion": "^10.0.27",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "prettier": "^1.19.1",
     "typescript": "^3.7.4"
   }
 }
