--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,11 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "noLib": false,
+    "types": ["react"],
     "alwaysStrict": false,
     "isolatedModules": true,
     "jsx": "preserve"
