--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@react-hook/window-size": "^1.0.13",
     "lodash.chunk": "^4.2.0",
     "next": "^9.2.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-plx": "^1.3.15",
     "react-scroll-parallax": "^2.3.1",
+    "react-three-fiber": "^4.0.20",
     "three": "^0.113.2"
   },
   "license": "ISC",
