--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "preserveSymlinks": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.gltf"]
 }
