--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.0",
     "react-plx": "^1.3.15",
     "react-three-fiber": "^4.0.20",
-    "three": "^0.113.2"
+    "three": "^0.113.2",
+    "typeface-fira-code": "^1.1.4"
   },
   "license": "ISC",
   "devDependencies": {
@@ -33,7 +34,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "next-images": "^1.4.0",
     "prettier": "^1.19.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack-glsl-loader": "^1.0.1"
   }
 }
