--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/core": "^10.0.28",
     "@react-hook/window-scroll": "^1.0.7",
     "@react-hook/window-size": "^1.0.13",
+    "isomorphic-unfetch": "^3.0.0",
     "lodash.chunk": "^4.2.0",
     "next": "^9.3.0",
     "react": "^16.13.0",
@@ -17,7 +18,8 @@
     "react-plx": "^1.3.15",
     "react-three-fiber": "^4.0.20",
     "three": "^0.113.2",
-    "typeface-fira-code": "^1.1.4"
+    "typeface-fira-code": "^1.1.4",
+    "typeface-inter": "^3.12.0"
   },
   "license": "ISC",
   "devDependencies": {
