--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,9 @@
     }
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "shared-node-browser": true,
+    "node": true
   },
   "settings": {
     "react": {
