--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@react-hook/window-size": "^1.0.13",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.chunk": "^4.2.0",
-    "next": "^9.3.0",
+    "next": "^9.3.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-draggable": "^4.3.1",
     "react-plx": "^1.3.15",
     "react-three-fiber": "^4.0.20",
     "three": "^0.113.2",
@@ -30,6 +31,8 @@
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "babel-plugin-emotion": "^10.0.29",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
