--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "prettier/@typescript-eslint",
-    "prettier/react"
+    "prettier/react",
+    "plugin:jsx-a11y/recommended"
   ],
   "plugins": ["react", "prettier", "react-hooks", "jsx-a11y"],
   "parserOptions": {
