--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "using-preact",
+  "name": "v1rtl.site",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -8,38 +8,41 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "@react-hook/window-scroll": "^1.0.7",
+    "@react-hook/window-scroll": "^1.1.4",
     "@react-hook/window-size": "^1.0.13",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.chunk": "^4.2.0",
     "next": "^9.3.5",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "prism-react-renderer": "^1.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
-    "react-plx": "^1.3.15",
-    "react-three-fiber": "^4.0.20",
+    "react-three-fiber": "^4.1.1",
     "three": "^0.113.2",
     "typeface-fira-code": "^1.1.4",
     "typeface-inter": "^3.12.0"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@types/node": "^13.9.0",
-    "@types/react": "^16.9.23",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
-    "babel-plugin-emotion": "^10.0.29",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0",
+    "@mapbox/rehype-prism": "^0.4.0",
+    "@mdx-js/loader": "^1.6.0",
+    "@next/mdx": "^9.3.6",
+    "@types/mdx-js__react": "^1.5.1",
+    "@types/node": "^13.13.3",
+    "@types/react": "^16.9.34",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-plugin-emotion": "^10.0.33",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "next-images": "^1.4.0",
+    "next-transpile-modules": "^3.3.0",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3",
     "webpack-glsl-loader": "^1.0.1"
