--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,16 @@
     "preserveSymlinks": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "assets.d.ts", "**/*.ts", "**/*.tsx", "**/*.gltf", "**/*.glsl", "**/*.png"]
+  "include": [
+    "next-env.d.ts",
+    "assets.d.ts",
+    "mdx.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.gltf",
+    "**/*.glsl",
+    "**/*.png",
+    "**/*.mdx",
+    "**/*.md"
+  ]
 }
