running into problems with api routes

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@react-hook/window-size": "^1.0.13",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.chunk": "^4.2.0",
-    "next": "^9.3.5",
+    "next": "9.2",
     "prism-react-renderer": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
     "react-three-fiber": "^4.1.1",
-    "three": "^0.113.2",
+    "three": "^0.116.0",
     "typeface-fira-code": "^1.1.4",
     "typeface-inter": "^3.12.0"
   },
