--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "@react-hook/window-scroll": "^1.1.4",
     "@react-hook/window-size": "^1.0.13",
     "isomorphic-unfetch": "^3.0.0",
-    "lodash.chunk": "^4.2.0",
-    "next": "9.2",
+    "next": "^9.3.6",
     "prism-react-renderer": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -41,10 +40,15 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-svgo": "^7.1.0",
     "next-images": "^1.4.0",
+    "next-optimized-images": "^2.6.0",
     "next-transpile-modules": "^3.3.0",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3",
+    "webp-loader": "^0.6.0",
     "webpack-glsl-loader": "^1.0.1"
   }
 }
