--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["next/babel", "@emotion/babel-preset-css-prop"],
+  "presets": [
+    [
+      "next/babel",
+      {
+        "preset-env": {
+          "useBuiltIns": false,
+          "targets": "Chrome >= 75, Safari >= 10.1, iOS >= 10.3, Firefox >= 69, Edge >= 18"
+        }
+      }
+    ],
+    "@emotion/babel-preset-css-prop"
+  ],
   "plugins": ["emotion"]
 }
