--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-optimized-images": "^2.6.0",
     "next-transpile-modules": "^3.3.0",
     "prettier": "^1.19.1",
+    "raw-loader": "^4.0.1",
     "typescript": "^3.8.3",
     "webp-loader": "^0.6.0",
     "webpack-glsl-loader": "^1.0.1"
