--- a/package.json
+++ b/package.json
@@ -48,6 +48,12 @@
     "next-transpile-modules": "^3.3.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
+    "rehype-autolink-headings": "^3.0.0",
+    "rehype-slug": "^3.0.0",
+    "remark-emoji": "^2.1.0",
+    "remark-images": "^2.0.0",
+    "remark-twemoji": "^0.1.1",
+    "twemoji": "^13.0.0",
     "typescript": "^3.8.3",
     "webp-loader": "^0.6.0",
     "webpack-glsl-loader": "^1.0.1"
