--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@juggle/resize-observer": "^3.1.3",
     "@react-hook/window-scroll": "^1.1.4",
     "@react-hook/window-size": "^1.0.13",
+    "drei": "^0.0.32",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.6",
     "prism-react-renderer": "^1.1.0",
