--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-hook/window-scroll": "^1.1.5",
     "@react-hook/window-size": "^1.0.13",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.4.0",
+    "next": "^9.4.2",
+    "next-mdx-enhanced": "^3.0.0",
     "prism-react-renderer": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -20,7 +21,8 @@
     "react-three-fiber": "^4.2.4",
     "three": "^0.116.1",
     "typeface-fira-code": "^1.1.4",
-    "typeface-inter": "^3.12.0"
+    "typeface-inter": "^3.12.0",
+    "typeface-source-sans-pro": "^1.1.5"
   },
   "license": "ISC",
   "devDependencies": {
@@ -28,13 +30,13 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@mapbox/rehype-prism": "^0.4.0",
     "@mdx-js/loader": "^1.6.1",
-    "@next/mdx": "^9.4.0",
     "@types/mdx-js__react": "^1.5.1",
     "@types/node": "^13.13.6",
     "@types/react": "^16.9.35",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "babel-plugin-emotion": "^10.0.33",
+    "babel-plugin-import-glob-array": "^0.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
