--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@juggle/resize-observer": "^3.1.3",
     "@react-hook/window-scroll": "^1.1.5",
     "@react-hook/window-size": "^1.0.13",
+    "dayjs": "^1.8.27",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.4.2",
     "next-mdx-enhanced": "^3.0.0",
@@ -18,7 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.1",
-    "react-three-fiber": "^4.2.4",
+    "react-three-fiber": "^4.2.5",
     "three": "^0.116.1",
     "typeface-fira-code": "^1.1.4",
     "typeface-inter": "^3.12.0",
