--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
   "env": {
     "browser": true,
     "shared-node-browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "settings": {
     "react": {
@@ -28,6 +29,8 @@
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-unused-vars": "off"
   }
 }
