--- a/package.json
+++ b/package.json
@@ -8,48 +8,51 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "@juggle/resize-observer": "^3.1.3",
-    "@react-hook/window-scroll": "^1.1.5",
-    "@react-hook/window-size": "^1.0.13",
-    "dayjs": "^1.8.27",
+    "@juggle/resize-observer": "^3.2.0",
+    "@react-hook/window-scroll": "^1.2.3",
+    "@react-hook/window-size": "^2.1.1",
+    "dayjs": "^1.8.28",
+    "drei": "0.0.53",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.4.2",
+    "next": "^9.4.4",
     "next-mdx-enhanced": "^3.0.0",
-    "prism-react-renderer": "^1.1.0",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-draggable": "^4.4.1",
-    "react-three-fiber": "^4.2.5",
-    "three": "^0.116.1",
+    "react-draggable": "^4.4.2",
+    "react-dropzone": "^11.0.1",
+    "react-three-fiber": "^4.2.8",
+    "three": "^0.117.1",
     "typeface-fira-code": "^1.1.4",
     "typeface-inter": "^3.12.0",
     "typeface-source-sans-pro": "^1.1.5"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.2",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@mapbox/rehype-prism": "^0.4.0",
-    "@mdx-js/loader": "^1.6.1",
-    "@types/mdx-js__react": "^1.5.1",
-    "@types/node": "^13.13.6",
+    "@mdx-js/loader": "^1.6.5",
+    "@types/mdx-js__react": "^1.5.2",
+    "@types/node": "^14.0.6",
     "@types/react": "^16.9.35",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "babel-plugin-emotion": "^10.0.33",
     "babel-plugin-import-glob-array": "^0.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-svgo": "^7.1.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-svgo": "^8.0.0",
+    "next-fonts": "^1.1.0",
     "next-images": "^1.4.0",
-    "next-optimized-images": "^2.6.0",
+    "next-optimized-images": "^2.6.1",
     "next-transpile-modules": "^3.3.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
     "rehype-autolink-headings": "^3.0.0",
     "rehype-slug": "^3.0.0",
@@ -57,7 +60,7 @@
     "remark-images": "^2.0.0",
     "remark-twemoji": "^0.1.1",
     "twemoji": "^13.0.0",
-    "typescript": "^3.9.2",
+    "typescript": "^3.9.3",
     "webp-loader": "^0.6.0",
     "webpack-glsl-loader": "^1.0.1"
   }
