--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "module": "esnext",
+    "downlevelIteration": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
