--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^3.1.0",
     "babel-plugin-emotion": "^10.0.33",
     "babel-plugin-import-glob-array": "^0.2.0",
+    "bindings": "^1.5.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
