trying to make it work

--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,5 @@
     ],
     "@emotion/babel-preset-css-prop"
   ],
-  "plugins": ["emotion", "import-glob-array"]
+  "plugins": ["import-glob-array", "emotion"]
 }
